Fix overflow issue on smaller screens

--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -12,3 +12,8 @@
     margin-bottom: 50px;
     padding: 15px;
 }
+
+.body-container {
+    height: auto !important;
+    margin-bottom: 2% !important;
+}
