--- a/css/siteStyle.css
+++ b/css/siteStyle.css
@@ -128,6 +128,7 @@ html, body {
     width: 100%;
     height: 15%;
     position: relative;
+    overflow-x: hidden;
 }
 
 .table {
